Adding in some basic content (not linked to model)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<h1>
-  {{title}}
-</h1>
+<div class="app-content">
+
+  <h1>
+    {{title}}
+  </h1>
+
+  <md-card>
+    Hello.
+  </md-card>
+
+  <md-card>
+    <md-card-header>
+      <md-card-title>Baseline Assumptions</md-card-title>
+      <md-card-subtitle>Baseline...</md-card-subtitle>
+    </md-card-header>
+    <md-card-content>
+
+      <md-input-container class="app-full-width">
+        <input md-input  step="1000" required type="number"
+                                   placeholder="Adjusted Gross Income ($)"
+       />
+      </md-input-container>
+
+      <md-select required placeholder="Marital Status" [(ngModel)]="selectedValue">
+        <md-option *ngFor="let status of ['Single', 'Otherwise Diposed']" [value]="status">
+          {{status}}
+        </md-option>
+      </md-select>
+    </md-card-content>
+    <md-card-actions>
+    <button md-button>LIKE</button>
+    <button md-button>SHARE</button>
+    </md-card-actions>
+  </md-card>
+
+</div>
