Hooked up simulating function.   d.ts types still not working well.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,7 @@
       </md-select>
     </md-card-content>
     <md-card-actions>
-      <button md-button>LIKE</button>
-      <button md-button>SHARE</button>
+      <button md-button (click)="dm.baselineHypothetical.simulateHypothetical()">Simulate (Manual)</button>
     </md-card-actions>
   </md-card>
 
