Improve output formatting.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,23 +58,36 @@
       <md-card-title>Baseline Outcome</md-card-title>
     </md-card-header>
     <md-card-content>
-      <dl>
-        <dt>AGI</dt>
-        <dd>{{dm.baselineHypothetical.baseline.adjustedGrossIncome | currency:'USD':true:'1.2-2'}}</dd>
-        <dt>Charges</dt>
-        <dd *ngFor="let charge of dm.baselineHypothetical.outcome.charges">
-          {{charge.description}}: {{charge.amount | currency:'USD':true:'1.2-2'}}
-        </dd>
-        <dt>AGI Minus Charges</dt>
-        <dd>{{dm.baselineHypothetical.outcome.afterTaxIncome | currency:'USD':true:'1.2-2' }}</dd>dd>
-      </dl>
+      <table>
+        <tr>
+          <th></th>
+          <th>Baseline</th>
+        </tr>
+        <tr>
+          <td class="row-label">Income</td>
+          <td class="currency">{{dm.baselineHypothetical.outcome.income | currency:'USD':true:'1.0-0' }}</td>
+        </tr>
+        <tr>
+          <td class="row-label">Charges</td>
+          <td></td>
+        </tr>
+        <tr *ngFor="let charge of dm.baselineHypothetical.outcome.charges">
+          <td class="indent">{{charge.description}}</td>
+          <td class="currency">{{charge.amount | currency:'USD':true:'1.0-0' }}</td>
+        </tr>
+        <tr></tr>
+        <tr>
+          <td class="row-label">Net Income</td>
+          <td class="currency">{{dm.baselineHypothetical.outcome.netIncome | currency:'USD':true:'1.0-0' }}</td>
+        </tr>
+      </table>
     </md-card-content>
   </md-card>
 
-  <md-card>
-    <md-card-content>
-      {{dm | json}}
-    </md-card-content>
-  </md-card>
+  <!--<md-card>-->
+    <!--<md-card-content>-->
+      <!--{{dm | json}}-->
+    <!--</md-card-content>-->
+  <!--</md-card>-->
 
 </div>
