--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
     Hypothetical
   </md-toolbar>
 
+
   <md-card>
     <md-card-header>
-      <md-card-title>Baseline Assumptions</md-card-title>
+      <md-card-title>Baseline Taxes</md-card-title>
       <!--<md-card-subtitle>Baseline...</md-card-subtitle>-->
     </md-card-header>
     <md-card-content>
@@ -47,11 +48,35 @@
           <!--{{status}}-->
         <!--</md-option>-->
       <!--</md-select>-->
+      <h3>Expenses</h3>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Amount ($)</th>
+          <th></th>
+        </tr>
+        <tr *ngFor="let expense of dm.baselineHypothetical.baseline.expenses">
+          <td>
+            <input [(ngModel)]="expense.name" step=100 type="text"
+                   required placeholder="e.g., Rent, Mortage, Food, Tuition..."/></td>
+          <td class="indent">
+            $<input [(ngModel)]="expense.amount" step=100 type="number"
+                   required placeholder="e.g., 1200"/> / yr
+          </td>
+          <td><button md-icon-button (click)="dm.baselineHypothetical.baseline.expenses.splice(index,1)">
+            <md-icon color="accent">delete</md-icon>
+          </button></td>
+        </tr>
+      </table>
+      <button md-button (click)="dm.baselineHypothetical.baseline.expenses.push({name:undefined,amount:undefined})">
+        <i class="material-icons">note_add</i> New Expense
+      </button>
     </md-card-content>
     <md-card-actions>
       <button md-button (click)="dm.baselineHypothetical.simulateHypothetical()">Simulate (Manual)</button>
     </md-card-actions>
   </md-card>
+
 
   <md-card>
     <md-card-header>
